@@ -1,5 +1,12 @@
 2007-02-06  Scott James Remnant  <scott@netsplit.com>
 
+	* upstart/wire.c (upstart_push_array, upstart_pop_array): Implement
+	new array functions; note that these use a newer format that allows
+	us to transmit NULL without needing to limit the size of the array.
+	* upstart/wire.h: Add prototypes.
+	* upstart/tests/test_wire.c (test_push_array, test_pop_array):
+	Test the new array functions.
+
 	* init/job.c (job_run_script): Build up the argument list, appending
 	those from the goal event if one is set.
 	(job_run_command): Use nih_str_array_add to build up the arguments,
